@@ -12,6 +12,7 @@ Minors changes:
 - Upgrade GUI translations.
 - Upgrade bash 4.2 to patch 024.
 - Upgrade e2fsprogs to 1.42.2.
+- Add Denon AVR-4306 profile to fuppes.
 
 
 Bug fixes:
